# Acetza

./: .clangd  .gitignore  README.md  acetza.py
Muza/: CMakeLists.txt
Muza/Include/Muza/: Common.h  Constants.h  FrameRate.h  Math.h  Measure.h  Panic.h  Printing.h  Scale.h  Types.h  Wave.h
Muza/Include/Muza/Blocks/: Basic.h  Block.h  Enveloper.h  Harmonizer.h
Muza/Include/Muza/Functions/: Numberers.h  Primitives.h  Transformers.h
Muza/Include/Muza/RT/: AudioCallback.h  BlockThread.h  BufferBlock.h  MidiEvent.h  MidiThread.h  Session.h  Util.h  WaveBuffer.h
Muza/Source/: main.c
Muza/Source/Muza/: Constants.c  FrameRate.c  Math.c  Measure.c  Panic.c  Printing.c  Scale.c
Muza/Source/Muza/Blocks/: Basic.c  Block.c  Enveloper.c  Harmonizer.c
Muza/Source/Muza/Functions/: Numberers.c  primitives.c  transformers.c
Muza/Source/Muza/RT/: AudioCallback.c  BlockThread.c  BufferBlock.c  MidiEvent.c  MidiThread.c  Session.c  Util.c  WaveBuffer.c
Muza/Source/Muza/Wave.h/: Builders.c  FrameRate.c  Getters.c  IO.c  Operations.c
Muza/include/Muza/: Panic.h  Types.h  Wave.h
Muza/include/Muza/Blocks/: Basic.h  Block.h  Enveloper.h  Harmonizer.h
Muza/include/Muza/Functions/: Numberers.h  Primitives.h
Muza/include/muza/: measure.h  printing.h
Muza/source/: main.c
Muza/source/muza/: Constants.c  Panic.c  Printing.c
Muza/source/muza/Blocks/: Basic.c  Block.c  Enveloper.c  Harmonizer.c
Muza/source/muza/Functions/: Numberers.c  transformers.c
Muza/source/muza/Wave.h/: FrameRate.c  Getters.c  IO.c
Muza/source/muza/measure.h/: measure.c
pyman/: build.py  (+2 more)
(+26 files in other folders)
